# catbot

./: .gitignore  README.md  catbot.py  links.txt  pyproject.toml  time.py
catbot/: .gitignore  answers.py  basic.py  catbot.py  champs.txt  chat.py  kill.sh  league.py  manage.py  run.sh  run_catbot.sh  temp.txt  template.py  time.py  time.txt
cogs/: chatcat.py  kittyleague.py  plaincat.py  scrapercat.py  videokat.py
cogs/tools/: __init__.py  videotogif.py
old/: kittyleague.py  plaincat.py
template/: cogtemplate.py  template.py
